ie11 scss edit on cross-through

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -137,6 +137,28 @@
             </ul>
         </div>
 
+        <div class="opss-border-all govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8">
+            <h2 class="govuk-heading-s">
+                Accept and submit
+            </h2>
+
+            <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+                <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-1" target="_blank">Accept and submit pt1</a><br>
+                    The user clicks the Accept and submit task and goes to a page showing their full draft with the ability to make changes (content details yet to be designed). Two of these forms also ask for confirmation of any change (with a checkbox). The bottom of the page has a 'Save and continue' button (with a 'Go back to the task list' hyperlink). (Errors and error messages on this page will functional as normal). The page has a Back button. Clicking the save and continue button, takes the user to...
+
+                </li>
+                <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-2" target="_blank">Accept and submit pt2</a><br>
+                    This page shows the full draft details (and is the same as the 'View the draft' page, but has the addition of the Declaration at the bottom with an 'Accetp and submit' button (and a 'Go back to the task list' hyperlink).
+                </li>
+                <li>
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-2" target="_blank">Accept and submit success</a><br>
+                    After accepting and submitting we return <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-success">this full 'complete' <abbr>GDS</abbr> page</a>.
+                </li>
+            </ul>
+        </div>
+
 
         <h2 class="govuk-heading-s">More pages are coming...</h2>
 
