--- a/app/views/cosmetics-general/incomplete-product_b.html
+++ b/app/views/cosmetics-general/incomplete-product_b.html
@@ -378,7 +378,7 @@
         </div>
 
         <div class="opss-border-all govuk-!-padding-top-2 govuk-!-padding-right-2 govuk-!-padding-bottom-2 govuk-!-padding-left-2 govuk-!-margin-top-4 govuk-!-margin-bottom-4">
-            <h2 class="govuk-heading-s opss-grouping__heading-s opss-grouping__heading--norm">Assigned contact</h2>
+            <h2 class="govuk-heading-s">Assigned contact</h2>
 
             <dl class="govuk-summary-list govuk-summary-list--no-border opss-summary-list-vertical">
                 <div class="govuk-summary-list__row">
