accept and submit notes

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -109,6 +109,11 @@ abbr[title]{
     }
 }
 
+kbd {
+    font-family: inherit;
+    font-weight: bold;
+}
+
 .opss-text-align-center {
     text-align: center;
 }
