--- a/app/views/cosmetics-general/tasks/inc_opss-header-section.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-header-section.html
@@ -5,7 +5,7 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                    <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="cos-prod-hint">
+                    <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
                        <span class="govuk-caption-m">Product draft for: </span> Lorem ipsum dolor
                     </h1>
 
