--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -45,7 +45,7 @@
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-2" target="_blank">Tasks list page 2</a>
-                    The user has completed the 'Create the product' task. The task list page now looks like this: The sub title has now updated and the main title has now changed to the product name. The header hint text has now also updated. The 'View draft' and 'Delete draft' links now appear.
+                    The user has completed the 'Create the product' task. The task list page now looks like this: The sub title has now updated and the main title has now changed to the product name. The header hint text has now also updated. The 'View the draft' and 'Delete the draft' links now appear.
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-3" target="_blank">Tasks list page 3</a>
@@ -66,7 +66,7 @@
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-2b" target="_blank">Tasks list page 2b</a>
-                    The user has completed the 'Create the product' task. The task list page now looks like this: The sub title has now updated and the main title has now changed to the product name. The header hint text has now also updated. The 'View draft' and 'Delete draft' links now appear.<br><br>
+                    The user has completed the 'Create the product' task. The task list page now looks like this: The sub title has now updated and the main title has now changed to the product name. The header hint text has now also updated. The 'View the draft' and 'Delete the draft' links now appear.<br><br>
                     In task 1 the user defined the product to have 3x nanomaterials. An extra task ('Nanomaterials') has now been inserted into task position 2, and shows 3x nanomaterial holding places (with an Add and Remove link).
                 </li>
                 <li>
@@ -94,7 +94,7 @@
                 </li>
                 <li>
                     <a class="govuk-label govuk-link govuk-link--no-visited-state" href="task-page-2c" target="_blank">Tasks list page 2c</a>
-                    The user has completed the 'Create the product' task. The task list page now looks like this: The sub title has now updated and the main title has now changed to the product name. The header hint text has now also updated. The 'View draft' and 'Delete draft' links now appear.<br><br>
+                    The user has completed the 'Create the product' task. The task list page now looks like this: The sub title has now updated and the main title has now changed to the product name. The header hint text has now also updated. The 'View the draft' and 'Delete the draft' links now appear.<br><br>
                     In task 1 the user defined the product to have 3x nanomaterials and 3x items in a multi-item kit. A Nanomaterials task has now been inserted into the task list, and shows 3x nanomaterial holding places (with an Add and Remove link).
                     <br><br>
                     A multi-kit task and 3x items tasks <b>replace</b> the 'Product details' task, and have now also been inserted into the list. The list now has 5 tasks.
@@ -145,7 +145,7 @@
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-1" target="_blank">Accept and submit pt1</a><br>
-                    The user clicks the Accept and submit task and goes to a page showing their full draft with the ability to make changes (content details yet to be designed). Two of these forms also ask for confirmation of any change (with a checkbox). The bottom of the page has a 'Save and continue' button (with a 'Go back to the task list' hyperlink). (Errors and error messages on this page will functional as normal). The page has a Back button. Clicking the save and continue button, takes the user to...
+                    The user clicks the Accept and submit task and goes to a page showing their full product draft with the ability to make changes (content details yet to be designed). Two of these forms elements also ask for confirmation of any change (with a checkbox). The bottom of the page has a 'Save and continue' button (with a 'Cancel' hyperlink, returning the user back to the task list page). (Errors and error messages on this page will functional as normal). The page has a Back button. Clicking the save and continue button, takes the user to...
 
                 </li>
                 <li>
