--- a/app/views/cosmetics-general/tasks/inc_opss-header-section-landing.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-header-section-landing.html
@@ -5,7 +5,7 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                    <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="cos-prod-hint">
+                    <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
                         Add a cosmetic product
                     </h1>
 
