submit pages 1 and 2

--- a/app/views/cosmetics-general/tasks/pg-accept-and-submit-1.html
+++ b/app/views/cosmetics-general/tasks/pg-accept-and-submit-1.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Accept and submit
+    Accept and submit - review
 {% endblock %}
 
 {% block beforeContent %}
