accept and submit success

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -153,8 +153,8 @@
                     This page shows the full draft details (and is the same as the 'View the draft' page, but has the addition of the Declaration at the bottom with an 'Accetp and submit' button (and a 'Go back to the task list' hyperlink).
                 </li>
                 <li>
-                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-2" target="_blank">Accept and submit success</a><br>
-                    After accepting and submitting we return <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-success">this full 'complete' <abbr>GDS</abbr> page</a>.
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-success" target="_blank">Accept and submit success</a><br>
+                    After accepting and submitting the user is presented with this page. (There is no Back link). If features a notification reference number (the number now associated with this product)? Some simple text explains what happens next (to be agreed): How long? Who? How will they know? How can they check?
                 </li>
             </ul>
         </div>
