--- a/app/views/cosmetics-general/tasks/pg-delete-draft.html
+++ b/app/views/cosmetics-general/tasks/pg-delete-draft.html
@@ -17,7 +17,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <form action="pg-delete-draft-success">
+      <form action="pg-delete-draft-success" novalidate>
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="delete-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -27,7 +27,7 @@
             </legend>
 
             <div id="delete-hint" class="govuk-hint">
-              The [product name here] product draft will be deleted.
+              The [product name here] product notification draft will be deleted.
             </div>
 
             <div class="govuk-radios govuk-radios--conditional govuk-!-padding-top-3">
