--- a/app/views/cosmetics-general/tasks/help/inc_products-task3.html
+++ b/app/views/cosmetics-general/tasks/help/inc_products-task3.html
@@ -1,6 +1,6 @@
         <div class="govuk-!-margin-top-7 govuk-!-margin-bottom-4">
             {% include "cosmetics-general/tasks/help/inc_title.html" %}
 
-            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You can review the draft and make final adjustments to the product details before accepting the draft and submitting it.
+            <p class="govuk-body govuk-!-font-size-16 opss-secondary-text">You can review the draft and make final changes to the product details before you are required to accept the draft and submit it.
             </p>
         </div>
