--- a/app/views/product-case-testing/what-is-the-product-category.html
+++ b/app/views/product-case-testing/what-is-the-product-category.html
@@ -58,7 +58,8 @@
 
 
   <select class="govuk-select" id="category" name="category" aria-describedby="category-hint">
-<option value="Personal protective equipment (PPE)" selected>Personal protective equipment (PPE)</option>
+<option value="" selected></option>
+<option value="Personal protective equipment (PPE)">Personal protective equipment (PPE)</option>
 <option value="Hand sanitiser">Hand sanitiser</option>
 <option value="Chemical products">Chemical products</option>
 <option value="Childcare articles and children’s equipment">Childcare articles and children’s equipment</option>
