--- a/app/views/cosmetics-general/tasks/task-block-01.html
+++ b/app/views/cosmetics-general/tasks/task-block-01.html
@@ -20,13 +20,15 @@
   </div>
 </div>
 
-{% include "drafts-gui/inc_opss-header-section.html" %}
+{% include "cosmetics-general/tasks/inc_opss-header-section.html" %}
 
 <div class="govuk-grid-row opss-switch-cols">
     <div class="govuk-grid-column-one-quarter govuk-!-padding-top-9 opss-switch-cols__right">
-        <a href="view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-            View draft
+        <a href="pg-view-draft.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+            View this draft
         </a>
+
+        {% include "cosmetics-general/tasks/help/inc_products-task-blocked1.html" %}
     </div>
     <section class="govuk-grid-column-three-quarters govuk-!-padding-top-9 opss-switch-cols__left" role="region" aria-label="Tasks">
 
