--- a/app/views/create-cases-add-products/what-is-the-product-category-error.html
+++ b/app/views/create-cases-add-products/what-is-the-product-category-error.html
@@ -54,9 +54,13 @@
         },
             items: [
                 {
-                value: "val01",
-                text: "Electrical appliances and equipment",
+                value: "",
+                text: "",
                 selected: true
+                },
+                {
+                value: "val01",
+                text: "Electrical appliances and equipment"
                 },
                 {
                 value: "val02",
