--- a/app/views/cosmetics-general/incomplete-product_b.html
+++ b/app/views/cosmetics-general/incomplete-product_b.html
@@ -334,6 +334,83 @@
 
         </section>
 
+<section id="hair-dye-paste" class="govuk-!-margin-top-9 opss-grouping">
+        <h3 class="govuk-heading-m opss-grouping__heading-m">Item 3: Hair dye paste</h3>
+
+        <dl class="govuk-summary-list govuk-summary-list opss-summary-list-mixed">
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Shades</dt>
+                <dd class="govuk-summary-list__value ">
+                    <ul class="govuk-list govuk-list--bullet">
+                            <li>Brown</li>
+                            <li>Natural Black</li>
+                    </ul>
+                </dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Contains <abbr title="Carcinogenic, mutagenic, reprotoxic">CMR</abbr> substances</dt>
+                <dd class="govuk-summary-list__value ">No</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Nanomaterials</dt>
+                <dd class="govuk-summary-list__value ">  None</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Category of product</dt>
+                <dd class="govuk-summary-list__value ">Hair and scalp products</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Category of hair and scalp product</dt>
+                <dd class="govuk-summary-list__value ">Hair colouring products</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Category of hair colouring product</dt>
+                <dd class="govuk-summary-list__value ">Other hair colouring products</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Formulation given as</dt>
+                <dd class="govuk-summary-list__value ">Concentration ranges</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Formulation</dt>
+                <dd class="govuk-summary-list__value ">
+                    <a href="/rails/active_storage/blobs/proxy/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBTQT09IiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--2a14bcb37a6d8dcdafb51da20d31252407d30482/Ingredients_test%20(1)%20(1).pdf">Ingredients_test (1) (1).pdf</a>
+
+                </dd>
+                <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link govuk-link--no-visited-state" href="/responsible_persons/2/notifications/59917298/components/50/formulation/edit">Change <span class="govuk-visually-hidden">formulation file</span></a>
+                </dd>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Physical form</dt>
+                <dd class="govuk-summary-list__value ">Cream or paste</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Special applicator</dt>
+                <dd class="govuk-summary-list__value ">No</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key ">Acute poisoning information</dt>
+                <dd class="govuk-summary-list__value "></dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key "><abbr title="Power of hydrogen">pH</abbr> range</dt>
+                <dd class="govuk-summary-list__value ">11.0 to 12.0</dd>
+                <span class="govuk-summary-list__actions"></span>
+            </div>
+        </dl>
+      </section>
+
         <section class="govuk-!-margin-top-7">
             <h3 class="govuk-heading-m">Declaration</h3>
 
