XLSX link updates

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -169,7 +169,7 @@
                 </li>
                 <li>
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-accept-and-submit-success" target="_blank">Accept and submit success</a><br>
-                    After accepting and submitting the user is presented with this page. (There is no Back link). It features a notification reference number (the number now associated with this product/notification)? Some simple text explains what happens next (to be agreed): How long? Who? How will they know? How can they check?
+                    After accepting and submitting the user is presented with this page. (There is no Back link). It features a notification reference number (the number now associated with this product/notification)? Bruce to provide some copy for this page.
                 </li>
             </ul>
         </div>
