--- a/app/views/psd-general/businesses-page.html
+++ b/app/views/psd-general/businesses-page.html
@@ -76,7 +76,7 @@
                           Sort by
                       </label>
                       <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort" aria-controls="results-order">
-                          <option value="relevance" selected="selected">Relevance</option>
+                          <option value="" selected="selected"></option>
                           <option value="newly">Newly added</option>
                           <option value="most">Most cases</option>
                       </select>
