--- a/app/views/psd-general/inc_opss-results-section.html
+++ b/app/views/psd-general/inc_opss-results-section.html
@@ -753,7 +753,7 @@
 
                 <!-- temporary location for CVS link, until the filters column is rebuilt -->
                 <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
-                Request this list as a downloadable <a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Comma-Separated Values">CSV</abbr> file</a>.
+                Request this list as a downloadable <a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> (spreadsheet)</a> (spreadsheet)</a> file.
                 </p>
 
 
