--- a/app/views/psd-general/cases-page-banner.html
+++ b/app/views/psd-general/cases-page-banner.html
@@ -19,7 +19,7 @@
       The <abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr></a> file is being created
     </h3>
     <p class="govuk-body">You will receive an email when the cases export is ready to download.</p>
-    <p class="govuk-body-s">An <abbr>XLSX</abbr> file is a Microsoft Excel Open <abbr title="Extensible Markup Language">XML</abbr> Format Spreadsheet file. You can open the file using Microsoft Office Excel or Google sheets (or any software which supports the format).</p>
+    <p class="govuk-body-s">An <abbr>XLSX</abbr> file is a Microsoft Excel Open <abbr title="Extensible Markup Language">XML</abbr> Format Spreadsheet file. You can open the file with Microsoft Excel or Google sheets (or any software which supports the format).</p>
   </div>
 </div>
 
