--- a/app/views/cosmetics-general/tasks/inc_opss-header-section.html
+++ b/app/views/cosmetics-general/tasks/inc_opss-header-section.html
@@ -6,7 +6,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
                     <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-                       <span class="govuk-caption-m">Product draft for: </span> Lorem ipsum dolor
+                       <span class="govuk-caption-m">Product notification draft for: </span> Lorem ipsum dolor
                     </h1>
 
                     <p class="govuk-body opss-secondary-text">
