--- a/app/views/psd-general/inc_opss-header-section.html
+++ b/app/views/psd-general/inc_opss-header-section.html
@@ -23,6 +23,10 @@
                 <p class="govuk-body-s">
                     <span id="search-hint">You can search for a case using the keywords that describe it and by filtering the results.</span> You can also filter all case records without a keyword search.
                 </p>
+
+                <!--p class="govuk-body-s"> CONTEXTUAL MSG
+                    You can request search results as a downloadable <abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> spreadsheet file.
+                </p-->
                 <!--p class="govuk-body-s">
                     You can create a new case or add a product to an existing case.
                 </p-->
