new page for nano message

--- a/app/views/cosmetics-general/tasks/index.html
+++ b/app/views/cosmetics-general/tasks/index.html
@@ -169,8 +169,8 @@
                     The <u>Add</u> link simply goes to the first page of the new nanomaterials task ("What is the nanomaterial INCI name?"), and on completion adds the nanomaterial to <b>top</b> of the nanomaterial list as 'Completed'.
                 </li>
                 <li>
-                    *** TO DO *** <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-nanomaterial" target="_blank">Remove a nanomaterial</a> <br>
-                    This is the new page to remove one or more nanomaterials: the user selects from a checkbox list of the nanomaterial names (even if they are still "Nanomaterial 1, 2, etc" and a 'Delete and continue' button returns the user to the task list page with the list updated. The page includes hint text advising that if all nanomaterials are deleted they must complete the first task again to add nanomaterials.
+                    <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-remove-nanomaterial" target="_blank">Remove (nanomaterials)</a> <br>
+                    "Select which nanomaterial(s) to remove" - This is the new page to remove one or more nanomaterials: the user selects from a checkbox list of the nanomaterial names (even if they are still "Nanomaterial 1, 2, etc" and a 'Delete and continue' button returns the user to the task list page with the list updated. (No standalone confirmation page required and a green button is fine). The page includes hint text advising that if all nanomaterials are deleted they must complete the first task again to add nanomaterials. The Cancel link returns the user back to the Tasks list page.
                 </li>
             </ul>
         </div>
@@ -185,7 +185,7 @@
                     <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-item-name" target="_blank">What is the item called?</a> <br>This is the new page that <b>only</b> appears at the start of the penultimate task (Multi-item details) if the product is a multi-item kit (as the user begins the individual tasks of defining each item). On this page we Save and continue (so that the name is instantly assigned to the item instance in the task list, even if the task is not completed) and the new name is used in the task list (but  the status tag remains 'Not started').
                 </li>
                 <li>
-                   <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-which-nanomaterials" target="_blank">Which nanomaterials are included in this item?</a> <br>This is the next new page in the flow (after 'What is the item called?', above) and <b>only</b> appears if the product has nanomaterials defined. A 'Cancel' link - next to the Continue button, is a hyperlink linking back to the task list page.
+                   <span class="govuk-!-font-weight-bold govuk-!-display-inline">New page:</span> <a class="govuk-label govuk-link govuk-link--no-visited-state govuk-!-display-inline" href="pg-which-nanomaterials" target="_blank">Select which nanomaterials are included in the item</a> <br>This is the next new page in the flow (after 'What is the item called?', above) and <b>only</b> appears if the product has nanomaterials defined. A 'Cancel' link - next to the Continue button, is a hyperlink linking back to the task list page.
                 </li>
                 <li>
                     Note: the next page in the flow ("Is the product intended to be rinsed off or left on?") is not a new page but it also only appears if the product has nanomaterials defined.
