--- a/app/views/index.html
+++ b/app/views/index.html
@@ -245,6 +245,7 @@
                   <li><a class="govuk-link govuk-link--no-visited-state strike" href="/cosmetics-general/incomplete-product_a.html" target="_blank">Incomplete alt v</a></li>
                 </ul>
               </li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/completed-with-message.html" target="_blank">Completed - with message example</a></li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified.html" target="_blank">Complete product page</a></li>
             </ul>
         </div>
