--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -375,6 +375,8 @@ dl.opss-summary-list-aside {
 }
 
 .opss-table {/* not .opss-table-items */
+    border-collapse: initial !important;/*stops 1px border issues on laptops using 150% text scale*/
+
     tbody tr:last-child th,
     tbody tr:last-child td {
         border-bottom: none;
@@ -415,6 +417,7 @@ dl.opss-summary-list-aside {
 }
 
 .opss-table-items {
+    border-collapse: initial !important;/*stops 1px border issues on laptops using 150% text scale*/
 
     thead th:nth-child(2) {width: auto; }
     thead th:nth-child(3) {width: auto; }
