more taks pages updates

--- a/app/views/cosmetics-general/tasks/pg-which-nanomaterials.html
+++ b/app/views/cosmetics-general/tasks/pg-which-nanomaterials.html
@@ -28,37 +28,37 @@
                     </legend>
 
                     <div id="nano-hint" class="govuk-hint govuk-!-width-three-quarters">
-                        If a nanomaterial you require is not shown, return to the tasks list page and add it. You can then start this item task again.
+                        If a nanomaterial you require is not shown, return to the tasks list page and add it. You can then start this task again.
                     </div>
 
                     <div class="govuk-checkboxes govuk-!-margin-top-7">
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano">
                                 Nanomaterial name
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-2" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-2">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-2">
                                 Another nanomaterial name
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-3" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-3">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-3">
                                 This nanomaterial
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-4" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-4">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-4">
                                 Name of the nanomaterial
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-5" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-5">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-5">
                                 Yet another nanomaterial name
                             </label>
                         </div>
