--- a/app/views/drafts-gui/index.html
+++ b/app/views/drafts-gui/index.html
@@ -28,8 +28,8 @@
 
         <p class="govuk-body-m">Clicking one of these links is the equivalent to clicking the current 'Add cosmetic products' button.</p>
 
-
-        <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-8">
+        <h2 class="govuk-heading-m govuk-!-margin-bottom-2" style="color: #ff0000;">These pages have been superseded by the new designs</h2>
+        <ul class="govuk-list govuk-list--bullet govuk-list--spaced" style="text-decoration: line-through;">
             <li>Add a simple product (with no multipule items or nanomaterials).<br><a href="draft-1_pt-1" class="govuk-link govuk-link--no-visited-state" target="_blank">Version 1</a></li>
 
             <li>Add a product (with 3x nanomaterials).<br><a href="draft-2_pt-1" class="govuk-link govuk-link--no-visited-state" target="_blank">Version 2</a></li>
