--- a/app/views/cosmetics-general/completed-with-message.html
+++ b/app/views/cosmetics-general/completed-with-message.html
@@ -26,7 +26,7 @@
 
           <div class="govuk-grid-column-one-third govuk-!-margin-bottom-7">
             <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
-              Delete this incomplete notification
+              Delete this notification
             </a>
           </div>
 
