--- a/app/views/cosmetics-general/tasks/pg-remove-nanomaterial.html
+++ b/app/views/cosmetics-general/tasks/pg-remove-nanomaterial.html
@@ -28,37 +28,37 @@
                     </legend>
 
                     <div id="nano-hint" class="govuk-hint govuk-!-width-three-quarters">
-                        The selected nanomaterial(s) will be deleted from this draft. If all nanomaterials are deleted you can complete the first task again to add nanomaterials.
+                        The selected nanomaterial(s) will be removed and deleted from this draft. If you delete all of them you can add nanomaterials to the draft by completing the first task again.
                     </div>
 
                     <div class="govuk-checkboxes govuk-!-margin-top-7">
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano">
                                 Nanomaterial name
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-2" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-2">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-2">
                                 Another nanomaterial name
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-3" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-3">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-3">
                                 This nanomaterial
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-4" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-4">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-4">
                                 Name of the nanomaterial
                             </label>
                         </div>
                         <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="nano-5" name="nano" type="checkbox" value="checkbox">
-                            <label class="govuk-label govuk-checkboxes__label" for="checkbox-5">
+                            <label class="govuk-label govuk-checkboxes__label" for="nano-5">
                                 Yet another nanomaterial name
                             </label>
                         </div>
