--- a/app/views/index.html
+++ b/app/views/index.html
@@ -247,6 +247,7 @@
               </li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/completed-with-message.html" target="_blank">Completed - with message example</a></li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified.html" target="_blank">Complete product page</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/complete-product_b_notified-success.html" target="_blank">Includes example of new success banner </a></li>
             </ul>
         </div>
       </details>
